--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Odin Recipes</h1>
+        <a href="recipes/cheesecake.html">cheesecake recipe</a>
     </div>
 </body>
 </html>
