--- a/recipes/zebra_cake.html
+++ b/recipes/zebra_cake.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheesecake</title>
+    <title>Zebra Cake</title>
 </head>
 <body>
     <div>
-        <h1>Cheesecake</h1>
+        <h1>Zebra Cake Recipe</h1>
     </div>
 </body>
 </html>
