--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div>
-        <a href="recipes/cheesecake.html">cheesecake recipe</a>
+        <ul>
+            <li><a href="recipes/cheesecake.html">cheesecake recipe</a></li>
+            <li><a href="recipes/brownies.html">brownies recipe</a></li>
+            <li><a href="recipes/cupcakes.html">cupcakes recipe</a></li>
+            <li><a href="recipes/zebra_cake.html">zebra cake recipe</a></li>
+        </ul>
     </div>
 </body>
 </html>
