--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <div>
-        <ul>
-            <li><a href="recipes/cheesecake.html">cheesecake recipe</a></li>
-            <li><a href="recipes/brownies.html">brownies recipe</a></li>
-            <li><a href="recipes/cupcakes.html">cupcakes recipe</a></li>
-            <li><a href="recipes/zebra_cake.html">zebra cake recipe</a></li>
-        </ul>
+    <div class="dropdown">
+        <button class="dropbtn">Desserts</button>
+        <div class="dropcontent">
+            <a href="recipes/cheesecake.html">cheesecake recipe</a>
+            <a href="recipes/brownies.html">brownies recipe</a>
+            <a href="recipes/cupcakes.html">cupcakes recipe</a>
+            <a href="recipes/zebra_cake.html">zebra cake recipe</a>
+        </div>
     </div>
 </body>
 </html>
