edited the whole page again, created a bar - dropdown menu with more categories of recipes and the first created are already linked

--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <div class="dropdown">
-        <button class="dropbtn">Desserts</button>
-        <div class="dropcontent">
-            <a href="recipes/cheesecake.html">cheesecake recipe</a>
-            <a href="recipes/brownies.html">brownies recipe</a>
-            <a href="recipes/cupcakes.html">cupcakes recipe</a>
-            <a href="recipes/zebra_cake.html">zebra cake recipe</a>
-        </div>
+    <div class="menu-bar">
+        <ul>
+            <li><a href="#">Desserts</a>
+                <div class="submenu-dessert">
+                    <ul>
+                        <li><a href="recipes/cheesecake.html">cheesecake recipe</a></li>
+                        <li><a href="recipes/brownies.html">brownies recipe</a></li>
+                        <li><a href="recipes/cupcakes.html">cupcakes recipe</a></li>
+                        <li><a href="recipes/zebra_cake.html">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Entrees</a></li>
+            <li><a href="#">Main Courses</a></li>
+            <li><a href="#">Salads</a></li>
+            <li><a href="#">Snacks</a></li>
+        </ul>
     </div>
 </body>
 </html>
