all the menus are working and added the logo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>Odin Recipes</title>
 </head>
 <body>
     <div class="menu-bar">
+        <div class="logo">
+            <a href="../odin-recipes/index.html">
+                <img src="../odin-recipes/logo.png" alt="Nancy's logo" width="150" height="90">
+            </a>
+        </div>
         <ul>
             <li><a href="#">Desserts</a>
                 <div class="submenu-dessert">
@@ -20,10 +28,46 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="#">Entrees</a></li>
-            <li><a href="#">Main Courses</a></li>
-            <li><a href="#">Salads</a></li>
-            <li><a href="#">Snacks</a></li>
+            <li><a href="#">Entrees</a>
+                <div class="submenu-entrees">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Main Courses</a>
+                <div class="submenu-maincourse">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Salads</a>
+                <div class="submenu-salads">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Snacks</a>
+                <div class="submenu-snacks">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
         </ul>
     </div>
 </body>
