added changes and images

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <title>Cheesecake</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <div class="menu-bar">
@@ -70,5 +70,6 @@
             </li>
         </ul>
     </div>
+
 </body>
 </html>
