--- a/index.html
+++ b/index.html
@@ -70,5 +70,14 @@
             </li>
         </ul>
     </div>
+    <section class="carousel">
+        <div class="pic-ctn">
+            <img src="../odin-recipes/brownies.jpg" alt="" class="pic">
+            <img src="../odin-recipes/salad.jpg" alt="" class="pic">
+            <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
+            <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
+            <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+          </div>
+    </section>
 </body>
 </html>
