fixed the little gap of the carrousel

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <div class="pic-ctn">
             <img src="../odin-recipes/brownies.jpg" alt="" class="pic">
             <img src="../odin-recipes/salad.jpg" alt="" class="pic">
-            <img src="https://picsum.photos/200/300?t=3" alt="" class="pic">
-            <img src="https://picsum.photos/200/300?t=4" alt="" class="pic">
-            <img src="https://picsum.photos/200/300?t=5" alt="" class="pic">
+            <img src="../odin-recipes/Roasted-Beef-Tenderloin-4.jpg" alt="" class="pic">
+            <img src="../odin-recipes/tostones-9.webp" alt="" class="pic">
+            <img src="../odin-recipes/Oatmeal-Breakfast-Bars-11.jpg" alt="" class="pic">
           </div>
     </section>
 </body>
