--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -4,11 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cupcakes.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>Cupcakes</title>
 </head>
 <body>
-    <div>
-        <h1>Brownies Recipe</h1>
+    <div class="menu-bar">
+        <div class="logo">
+            <a href="../index.html">
+                <img src="../logo.png" alt="Nancy's logo" width="150" height="90">
+            </a>
+        </div>
+        <ul>  
+            <li><a href="#">Desserts</a>
+                <div class="submenu-dessert">
+                    <ul>
+                        <li><a href="recipes/cheesecake.html">cheesecake recipe</a></li>
+                        <li><a href="recipes/brownies.html">brownies recipe</a></li>
+                        <li><a href="recipes/cupcakes.html">cupcakes recipe</a></li>
+                        <li><a href="recipes/zebra_cake.html">zebra cake recipe</a></li>
+                    </ul>
+                </div>  
+            </li>
+            <li><a href="#">Entrees</a>
+                <div class="submenu-entrees">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Main Courses</a>
+                <div class="submenu-maincourse">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Salads</a>
+                <div class="submenu-salads">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><a href="#">Snacks</a>
+                <div class="submenu-snacks">
+                    <ul>
+                        <li><a href="#">cheesecake recipe</a></li>
+                        <li><a href="#">brownies recipe</a></li>
+                        <li><a href="#">cupcakes recipe</a></li>
+                        <li><a href="#">zebra cake recipe</a></li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
     </div>
+
 </body>
 </html>
